--- a/panier/index.html
+++ b/panier/index.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <link rel="stylesheet" href="css/style.css">
-        <script type="text/javascript" src="../js/panier_page.js"></script>
     </head>
 
     <body>
@@ -23,42 +22,81 @@
             </div>
         </nav>
         <div class="container-fluid" id="page_total">
-            <h1 class="text-center">Votre panier</h1>
+            <h1 class="text-center" id="titlePanier">Votre panier</h1>
 
-            <div id="panier_part"></div>
+            <div id="panier_part">
+                <table class="table">
+                    <thead class="text-center">
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Name</th>
+                            <th scope="col">Lense</th>
+                            <th scope="col">Price</th>
+                            <th scope="col"></th>
+                        </tr>
+                    </thead>
+                    <tbody class="text-center"></tbody>
+                </table>
+            </div>
 
-            <div id="message_vide"></div>
+            <div class="text-center" id="message_vide">
+                <p>Votre panier est vide !</p>
+            </div>
 
             <div id="form_part">
-                <form class="text-center">
-                    <div class="form-group">
-                        <label for="firstName" id="firstName">First Name</label>
-                        <input type="text" class="form-control" placeholder="John">
+                <form id="formulaire">
+                    <div class="form-group text-center">
+                        <label>First Name</label>
+                        <input class="form-control" id="input1" type="text" placeholder="John" required>
                     </div>
-                    <div class="form-group">
-                        <label for="lastName" id="lastName">Last Name</label>
-                        <input type="text" class="form-control" placeholder="Parker">
+                    <div class="form-group text-center">
+                        <label>Last name</label>
+                        <input class="form-control" id="input2" type="text" placeholder="Dupont" required>
                     </div>
-                    <div class="form-group">
-                        <label for="address" id="address">Address</label>
-                        <input type="text" class="form-control" placeholder="3 rue des lilas">
+                    <div class="form-group text-center">
+                        <label>Address</label>
+                        <input class="form-control" id="input3" type="text" placeholder="8 rue des lilas" required>
                     </div>
-                    <div class="form-group">
-                        <label for="city" id="city">City</label>
-                        <input type="text" class="form-control" placeholder="Paris">
+                    <div class="form-group text-center">
+                        <label>City</label>
+                        <input class="form-control" id="input4" type="text" placeholder="Paris" required>
                     </div>
-                    <div class="form-group">
-                        <label for="email" id="email">Email address</label>
-                        <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="xxxx@xxxxx.xx">
+                    <div class="form-group text-center">
+                        <label>Email address</label>
+                        <input class="form-control" id="input5" type="email" aria-describedby="emailHelp" placeholder="xxxxx@xxxx.xx" required>
+                    </div>
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-primary" id="buttonSubmit">Submit</button>
                     </div>
                 </form>
             </div>
+
+            <div id="validation" class="container-fluid text-center p-3">
+                <h1 class="h1Cust">Merci pour votre commande !</h1>
+                <hr>
+                <h2>Commande envoyée à :</h2>
+                <p class="font-weight-bold">Prénom :</p>
+                <p id="prenomClient"></p>
+                <p class="font-weight-bold">Nom :</p>
+                <p id="nomClient"></p>
+                <p class="font-weight-bold">Adresse :</p>
+                <p id="adresseClient"></p>
+                <p class="font-weight-bold">Ville :</p>
+                <p id="villeClient"></p>
+                <hr>
+                <h3 class="h1Cust">Votre numéro de commande est le suivant :</h3>
+                <p id="numeroCommande"></p>
+
+                <button type="button" class="btn btn-outline-danger d-flex m-auto"><a href="../index.html">Revenir à l'accueil</a></button>
+            </div>
         </div>
 
-        <footer class="page-footer font-small mt-3">
+        <footer class="page-footer font-small">
             <div class="footer-copyright text-center py-3">© 2020 Copyright:
                 <a href="https://orinoco.alexis-nesme.com/"> Orinoco.com</a>
             </div>
         </footer>
+
+        <script type="text/javascript" src="../js/panier_page.js"></script>
     </body>
 </html>
