Responsive complet (sans le footer de la page panier) + Addition panier effectuée + Fetch

--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
     </head>
 
     <body>
+        <!-- NAVBAR -->
         <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
             <div class="container">
                 <a class="navbar-brand" href="index.html">Orinoco</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="oi oi-menu">MENU</span>
-                </button>
 
-                <div class="collapse navbar-collapse">
+                <div class="navbar">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item active"><a href="index.html" class="nav-link">Accueil</a></li>
                         <li class="nav-item"><a href="panier/index.html" class="nav-link">Panier</a></li>
@@ -24,6 +22,7 @@
             </div>
         </nav>
 
+        <!-- TITRE ET SEPARATION -->
         <div class="container-fluid" id="title_cameras">
             <div class="container-fluid" id="title_cameras_texte">
                 <h1 class="h1_custom">Nos caméras vintages</h1>
@@ -31,12 +30,14 @@
             <div id="title_cameras_sepa"></div>
         </div>
 
+        <!-- SECTION DES CARDS -->
         <div class="container-fluid text-center" id="corps_page">
-            <div class="d-flex flex-wrap justify-content-center" id="cards_container"></div>
+            <div class="d-flex flex-wrap" id="cards_container"></div>
         </div>
 
+        <!-- FOOTER -->
         <footer class="page-footer font-small">
-            <div class="footer-copyright text-center py-3">© 2020 Copyright:
+            <div class="footer-copyright text-center">© 2020 Copyright:
                 <a href="https://orinoco.alexis-nesme.com/"> Orinoco.com</a>
             </div>
         </footer>
