--- a/product/product.html
+++ b/product/product.html
@@ -6,32 +6,31 @@
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="css-product/style.css">
-        <script type="text/javascript" src="js/product_page.js"></script>
+        <link rel="stylesheet" href="./css/style.css">
+        <script type="text/javascript" src="../js/product_page.js"></script>
     </head>
 
     <body>
+        <!-- NAVBAR -->
         <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
             <div class="container">
                 <a class="navbar-brand" href="../index.html">Orinoco</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="oi oi-menu">MENU</span>
-                </button>
 
-                <div class="collapse navbar-collapse">
+                <div class="navbar">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item"><a href="index.html" class="nav-link">Accueil</a></li>
-                        <li class="nav-item"><a href="../p5/panier/index.html" class="nav-link">Panier</a></li>
+                        <li class="nav-item"><a href="../index.html" class="nav-link">Accueil</a></li>
+                        <li class="nav-item"><a href="../panier/index.html" class="nav-link">Panier</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
 
+        <!-- Le produit séléctionné apparaît dans cette partie, et nous pouvons le personnaliser ainsi que l'ajouter au panier -->
         <div class="container-fluid text-center" id="page_product">
-            <h1 class="pb-5">Votre caméra :</h1>
-            <div class="row d-flex flex-wrap">
-                <div class="container-fluid col-6" id="product"></div>
-                <div class="container-fluid col-6 d-flex" id="lenses">
+            <h1 class="pb-5 h1_custom">Votre caméra :</h1>
+            <div class="d-flex flex-wrap" id="page-content">
+                <div class="container" id="product"></div>
+                <div class="d-flex" id="personnalisation">
                     <div class="align-self-center m-auto" id="lenses_content">
                         <h2 class="pb-5" id="cameraName"></h2>
                         <h3>Personnalisez votre produit :</h3>
@@ -44,8 +43,9 @@
             </div>
         </div>
 
-        <footer class="page-footer font-small">
-            <div class="footer-copyright text-center py-3">© 2020 Copyright:
+        <!-- FOOTER -->
+        <footer class="font-small">
+            <div class="footer-copyright text-center">© 2020 Copyright:
                 <a href="https://orinoco.alexis-nesme.com/"> Orinoco.com</a>
             </div>
         </footer>
