Finalisation complete du site

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE HTML>
 <html lang="fr">
     <head>
+        <title>Orinoco</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <link rel="stylesheet" href="css/style.css">
-        <script type="text/javascript" src="js/generate_cards.js"></script>
+        <script src="js/generate_cards.js"></script>
     </head>
 
     <body>
