Site terminé, responsive effectué, différents soucis réglés

--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <link rel="stylesheet" href="css/style.css">
-        <script src="js/generate_cards.js"></script>
     </head>
 
     <body>
-        <!-- NAVBAR -->
         <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
             <div class="container">
                 <a class="navbar-brand" href="index.html">Orinoco</a>
@@ -23,7 +21,6 @@
             </div>
         </nav>
 
-        <!-- TITRE ET SEPARATION -->
         <div class="container-fluid" id="title_cameras">
             <div class="container-fluid" id="title_cameras_texte">
                 <h1 class="h1_custom">Nos caméras vintages</h1>
@@ -31,16 +28,17 @@
             <div id="title_cameras_sepa"></div>
         </div>
 
-        <!-- SECTION DES CARDS -->
         <div class="container-fluid text-center" id="corps_page">
             <div class="d-flex flex-wrap" id="cards_container"></div>
         </div>
 
-        <!-- FOOTER -->
         <footer class="page-footer font-small">
             <div class="footer-copyright text-center">© 2020 Copyright:
                 <a href="https://orinoco.alexis-nesme.com/"> Orinoco.com</a>
             </div>
         </footer>
+
+        <script src="./js/functions.js"></script>
+        <script src="js/generate_cards.js"></script>
     </body>
 </html>
