--- a/product/product.html
+++ b/product/product.html
@@ -8,11 +8,9 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="./css/style.css">
-        <script src="../js/product_page.js"></script>
     </head>
 
     <body>
-        <!-- NAVBAR -->
         <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
             <div class="container">
                 <a class="navbar-brand" href="../index.html">Orinoco</a>
@@ -26,7 +24,6 @@
             </div>
         </nav>
 
-        <!-- Le produit séléctionné apparaît dans cette partie, et nous pouvons le personnaliser ainsi que l'ajouter au panier -->
         <div class="container-fluid text-center" id="page_product">
             <h1 class="pb-5 h1_custom">Votre caméra :</h1>
             <div class="d-flex flex-wrap" id="page-content">
@@ -44,11 +41,13 @@
             </div>
         </div>
 
-        <!-- FOOTER -->
         <footer class="font-small">
             <div class="footer-copyright text-center">© 2020 Copyright:
                 <a href="https://orinoco.alexis-nesme.com/"> Orinoco.com</a>
             </div>
         </footer>
+
+        <script src="../js/functions.js"></script>
+        <script src="../js/product_page.js"></script>
     </body>
 </html>
